# scorep_plugin_rocm_smi

./: CMakeLists.txt  README.md
include/: rocm_sensor.hpp
src/: get_supported_sensors.cpp  rocm_smi.cpp
